@@ -75,25 +75,22 @@
     :font-size 14px
 
 .tabbed
-  :padding 12px 0px 12px 16px
+  :padding 12px 12px 12px 16px
 
 .main
   :background white
-  :border
-    :right 3px lightgrey solid
-    :bottom 3px lightgrey solid
   :padding 8px 15px 15px 15px
+  :-moz-border-radius 4px
+  :-webkit-border-radius 4px
   
 .sidebar
   :color #3f3f3f
   :font-size 11px
-  :padding 0px 12px 0px 12px
+  :padding 0px 12px 0px 0px
   :width = !sidebar_width
 
 .form
   :background white
-  //:margin 15px 15px 15px 15px
-  //:padding 0px 0px 10px 0px
 
   h4
     :font-size 18px
