@@ -3,7 +3,7 @@
   border: 2px solid salmon;
   font-size: 12px;
   padding: 8px;
-  margin: 0px; }
+  margin: 8px 13px 0px 13px; }
   .errorExplanation h2 {
     background: salmon;
     color: white;
