@@ -162,18 +162,18 @@ tt {
     font-size: 14px; }
 
 .tabbed {
-  padding: 12px 0px 12px 16px; }
+  padding: 12px 12px 12px 16px; }
 
 .main {
   background: white;
-  border-right: 3px lightgrey solid;
-  border-bottom: 3px lightgrey solid;
-  padding: 8px 15px 15px 15px; }
+  padding: 8px 15px 15px 15px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px; }
 
 .sidebar {
   color: #3f3f3f;
   font-size: 11px;
-  padding: 0px 12px 0px 12px;
+  padding: 0px 12px 0px 0px;
   width: 210px; }
 
 .form {
@@ -417,7 +417,7 @@ tt {
   border: 2px solid salmon;
   font-size: 12px;
   padding: 8px;
-  margin: 0px; }
+  margin: 8px 13px 0px 13px; }
   .errorExplanation h2 {
     background: salmon;
     color: white;
