@@ -11,6 +11,7 @@ Tue, Mar 24, 2009
 Mon, Mar 23, 2009
 ---------------------------------------------------------------------
 - Finishing touches for [Edit Contacts] forms.
+- Moved sidebar to the lefthand column, changes location of Sass templates.
 
 Sat, Mar 21, 2009
 ---------------------------------------------------------------------
